name:                http-signature
version:             0.1.0.0
synopsis:            HTTP Signature generation
description:
        Implementation of Joyent's HTTP Signature Scheme
        http://tools.ietf.org/html/draft-cavage-http-signatures-00
homepage:            https://github.com/AlainODea-haskell/http-signature
license:             BSD3
license-file:        LICENSE
author:              Alain O'Dea
maintainer:          alain.odea@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
  -- hs-source-dirs:      
  default-language:    Haskell2010
